--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<script src="script.js" defer></script>
 	<title>Carousel and dropdown</title>
 </head>
 <body>
-	
+	<div class="dropwdown">
+		<button class="dropbtn">Try me</button>
+		<div class="drowpdown-items">
+			<a href="#">Home</a>
+			<a href="#">About</a>
+			<a href="#">Settings</a>
+			<a href="#">Other stuff</a>
+		</div>
+	</div>
 </body>
 </html>
