Setup of image carousel is ready

--- a/index.html
+++ b/index.html
@@ -17,5 +17,30 @@
 			<a href="#">Other stuff</a>
 		</div>
 	</div>
+	<div class="slide-container">
+		<div class="slides-fade">
+			<div class="numbertext">1 / 3</div>
+			<img src="./imgs/colorful-design-with-spiral-design_188544-9588.avif">
+			<div class="text">Caption Text</div>
+		  </div>
+		  <div class="slides-fade">
+			<div class="numbertext">2 / 3</div>
+			<img src="./imgs/sunset-1373171_1280.jpg">
+			<div class="text">Caption two</div>
+		  </div>
+		  <div class="slides-fade">
+			<div class="numbertext">3 / 3</div>
+			<img src="./imgs/pintura-lago-montana-montana-al-fondo_188544-9126.avif">
+			<div class="text">Caption three</div>
+		  </div>
+		  <a class="prev">&#10094;</a>
+		  <a class="next">&#10095;</a>
+	</div>
+	<br>
+	<div style="text-align:center">
+		<span class="dot"></span>
+		<span class="dot"></span>
+		<span class="dot"></span>
+	  </div>
 </body>
 </html>
