--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 	</div>
 	<br>
 	<div style="text-align:center">
-		<span class="dot"></span>
-		<span class="dot"></span>
-		<span class="dot"></span>
+		<span class="dot" data-number="1"></span>
+		<span class="dot" data-number="2"></span>
+		<span class="dot" data-number="3"></span>
 	</div>
 </body>
 </html>
